# learnLMwithRAG

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  lint.yaml
data/monitoring/: sessoin-20250510004921.json
src/evaluate/: eval.py
src/language_model/: llm.py
src/pipeline/: workflow.py
src/rag/: rag.py
src/ui/: gradio_interface.py  streamlit_interface.py
tests/utils/: test_config.py
utils/: config.py  load.py  monitoring.py
