[project]
name = "rag-assistant"
version = "0.1.0"

dependencies = [
    "streamlit",
    "langchain_google_genai",
    "langchain",
    "logging",
    "langchain_community",
    "datetime",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "taskipy"
]

[tool.taskipy.tasks]
ui = "PYTHONPATH=. uv run streamlit run src/ui/streamlit_interface.py"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]  # E = pycodestyle, F = pyflakes, I = isort
exclude = ["venv", "__pycache__"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["env", "__pycache__"]